--- a/sainpse-web/src/styles/global.css
+++ b/sainpse-web/src/styles/global.css
@@ -2,3 +2,41 @@
     padding-right: 0px !important;
     padding-left: 0px !important;
 }
+
+
+.noOverlap{
+    display: block;
+    padding-top: 20vh;
+}
+
+
+
+/* Mobile */
+@media (min-width: 480px) {
+    .generalFont {
+        font-size: 2.8vw;
+    }  
+}
+
+/* Desktop */
+@media (min-width: 992px) {
+    .generalFont {
+        font-size: 2.8vw;
+    }
+}
+
+/* Tablet */
+@media (min-width: 800px) {
+    .generalFont {
+        font-size: 2.8vw;
+    }
+}
+
+
+/* 4k */
+@media (min-width: 1280px) {
+    .generalFont {
+        font-size: 0.8vw;
+        margin-top: 20px;
+    }
+}
